--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -975,8 +975,11 @@
                                 <div class="breakeven-wrapper">
                                         <div class="top-wrapper" id="graph"></div>
                         
-                                        <div class="bar">
-                                                <div class="bar-wrapper" id="bar-graph"></div>
+                                        <div class="break-wrap">
+                                                <div class="bar">
+                                                        <div class="bar-wrapper" id="bar-graph"></div>
+                                                </div>
+                                                <p class="break-context">The difference between the cost of regular grid service and your projected savings with solar (per year)</p>
                                         </div>
                                 </div>           
                                 <!-- <p>According to our model, after an initial solar installation cost of {{installationCost}}, you'd <strong>likely break even</strong> on your initial solar panel investment <strong>{{breakEvenLow}} to {{breakEvenHigh}} years</strong> following your installation.</p> -->
