--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -496,3 +496,8 @@ body {
   .yields-context {
       font-size: 0.85em;
   }
+
+  .break-context {
+    margin-top: 2em;
+    font-size: 0.85em;
+  }
