adds adjustments to ratio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -872,7 +872,7 @@
                         </thead>
                         <tbody>
                                 <tr class="input-item">
-                                        <td>Your estimated monthly energy bill</td>
+                                        <td>Your estimated average monthly energy bill</td>
 
                                         <td *ngIf="editTableBill">
                                                 <input name="billTable" id="billTable" type="text" placeholder="Enter new member count" />
